  * switch from dpatch to quilt using
    /usr/share/doc/quilt/examples/dpatch2quilt.sh
    - rename debian/patches/*.dpatch to debian/patches/*.patch
    - add debian/patches/series, remove debian/patches/00list
    - debian/control: remove dpatch from Build-Depends
  * switch to source format 3.0 (quilt)
    - add debian/source/format
    - debian/rules: remove patching

 -- Jan Dittberner <jandd@debian.org>  Sun, 26 Sep 2010 20:23:18 +0200

libnss-pgsql (1.4.0debian-3) unstable; urgency=low

  * Remove Joerg from uploaders.  Thanks for your work! (closes: #473330,
    #472241)
  * Use shadowconnectionstring in shadow example (closes: #494196)
  * Reference the tables by the names we have just used (closes: #499331)

 -- Stephen Gran <sgran@debian.org>  Sun, 28 Sep 2008 13:31:02 +0100

libnss-pgsql (1.4.0debian-2) unstable; urgency=low

  * Make default schema useable (closes: #355329, #364462, #364889)
  * Change short description to be more uniform with other NSS library
    descriptions (closes: #314911)

 -- Stephen Gran <sgran@debian.org>  Tue, 13 Nov 2007 00:25:09 +0000

libnss-pgsql (1.4.0debian-1) unstable; urgency=low

  [ Mark Hymers ]
  * Add dpatch support
  * Acknowledge previous NMUs (closes: #273555).
  * Pull in FTBFS patch for amd64 as 01_fix_locks.dpatch. Closes: #285431.
  * Pull in setgrent deadlock patch as 02_fix_retcode.dpatch. Closes: #329467.
  * Merge postgresql-dev change.  (closes: #429979, #429187, #409767, #396574)

  [ Stephen Gran ]
  * New upstream version targetted at unstable (closes: #363590)
  * Remove wiggy from the Maintainer field (closes: #432255)
  * Bump version number so that we can reupload orig tarball - somehow in the
    upload to experimental, a regular file got replaced with a symlink, and
    now the package is unbuildable without reuploading the orig.
  * Don't ignore errors on clean
  * Depend on foo-stamp targets in debian/rules so as not to rebuild things
    twice.