@@ -9,6 +9,11 @@ libnss-pgsql (1.4.0debian-4) experimental; urgency=low
   * switch to source format 3.0 (quilt)
     - add debian/source/format
     - debian/rules: remove patching
+  * switch to debhelper 7 and simplified dh rules
+    - set debian/compat to 7
+    - set debhelper Build-Depends in debian/control to (>= 7.0.50~)
+    - add ${misc:Depends} to Depends in debian/control
+    - use simplified rules in debian/rules
 
  -- Jan Dittberner <jandd@debian.org>  Sun, 26 Sep 2010 20:23:18 +0200
 
